@@ -1,6 +1,7 @@
 v1.0.0, xxxxxxxxxxxxxxx
 Complete refactoring
 
+* Added new demosaicing algorithms, RCD is now the default one
 * Added support for FITS decompression and compression with Rice/Gzip and HCompress methods
 * Added support for quantization and HCompress scale factor settings for FITS compression
 * New preference entries for FITS compression settings
