@@ -1,6 +1,7 @@
 siril 1.0.0
 xx/xx/20
 
+* Added new demosaicing algorithms, RCD is now the default one
 * Added support for FITS decompression and compression with Rice/Gzip and HCompress methods
 * Added support for quantization and HCompress scale factor settings for FITS compression
 * New preference entries for FITS compression settings
